N.N.N  - DD-MMM-2015
====================
- Fixed in 'libvirt.pm' limiting to 100 all CPU values greater than 100.


3.8.1  - 13-Nov-2015
====================
- Added support in ZFS graph for versions older than 0.6.4.
- Added the new option 'extra_args' in 'ntp.pm' to be able to include extra
  arguments to the command executed by Monitorix.
	(suggested by Matti Pentti, Matti.Pentti AT cimcorp.com)
- Added SMART temperature ID 190 as a fallback option if 194 is missing. [#121]
- Fixed a missing identifier in sprintf(). [#109]
- Fixed a message of 'use of uninitialized value' in 'port.pm'. [#110]
- Fixed the Y-axis title in 'fail2ban.pm'. [#111]
- Fixed to avoid negative values in the network graph of 'process.pm'. [#117]
- Fixed to force a rigid scale in the memory graph.
	(thanks to Lane Russell, lanerussell028 AT gmail.com for pointing this out)
- Fixed the scale of the y-axis in 'du'.
- Fixed a DOM based XSS and a potential DoS vulnerabilities that affected the
  'when' parameter of the 'monitorix.cgi' file.
	(thanks to Dolev Farhi, farhi AT F5.com for pointing this out)
- Small cosmetic changes.


3.8.0  - 16-Sep-2015
====================
- Added a complete graph for the 'du' command.
	(suggested by Julien Flatrès, julien_flatres AT yahoo.fr)
- Added a complete graph for the PageSpeed Module.
	(suggested by Jeroen Kik, monitorix AT steelyard.nl)
- Added a complete graph for the 'upsc' (Network UPS Tools) command. [#95]
- Added a complete graph for the ZFS filesystem.
	(suggested by Kilian Cavalotti, kilian AT stanford.edu and others)
- Changed the code in Wowza Server graph to treat MessagesInBytesRate and
  MessagesOutBytesRate as gauge values. [#86]
- Changed to a clickable link the bottom URL in the Apache graph, and fixed the
  text color.
- Changed to a clickable link the bottom URL in the Lighttpd graph, and fixed
  the text color.
- Changed to a clickable link the bottom URL in the PHP APC graph, and fixed
  the text color.