@@ -287,6 +287,7 @@ secure_log_date_format = %b %e
 # LIBVIRT graph
 # -----------------------------------------------------------------------------
 <libvirt>
+	cmd = virsh
 	<list>
 		0 = centos6, winxp
 	</list>
